@@ -1,3 +1,12 @@
+2002-12-02  Masatake YAMATO  <jet@gyve.org>
+
+	* distro, tools-version.sh: New files.
+	distro comes from distro-0.8.1(http://distro.pipfield.ca/).
+	distro and tools-version.sh should be included only in CVS version
+	of sodipodi.
+	
+	* autogen.sh: Call tools-version.sh.
+	
 2002-12-02  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/dialogs/desktop-properties.c: Partial color picker implementation
